[package]
name = "ibuilder"
version = "0.1.0"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Interactive builder for Rust types"
homepage = "https://github.com/edomora97/ibuilder"
repository = "https://github.com/edomora97/ibuilder"
keywords = ["builder", "derive", "interactive"]
categories = ["config", "data-structures", "parsing"]
readme = "README.md"

[features]
default = ["derive"]
derive = ["ibuilder_derive"]

[dependencies]
failure = "0.1"
ibuilder_derive = { path = "../ibuilder_derive", optional = true, version = "0.1.0" }

[dev-dependencies]
trybuild = "1.0"
ibuilder_derive = { path = "../ibuilder_derive", version = "0.1.0" }