[package]
name = "ibuilder_derive"
version = "0.1.5"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Interactive builder for Rust types"
homepage = "https://github.com/edomora97/ibuilder"
repository = "https://github.com/edomora97/ibuilder"
keywords = ["builder", "derive", "interactive"]
categories = ["config", "data-structures", "parsing"]
readme = "README.md"

[dependencies]
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro-error = "1.0"

[dev-dependencies]
ibuilder = { path = "../ibuilder" }

[lib]
proc-macro = true
path = "src/lib.rs"
